<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:minHeight="164dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
>


    <TextView
        android:id="@+id/setting_decode_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center|left"
        android:text="@string/video_decode"
        android:textColor="@color/main_text_color"
        android:textSize="20sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <com.jyj.video.jyjplayer.ui.CustomRadioButton
            android:id="@+id/hard_decode"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center_vertical|left"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/setting_decode_hard"
            android:textColor="@color/main_text_color"
            android:textSize="16sp"/>


        <com.jyj.video.jyjplayer.ui.CustomRadioButton
            android:id="@+id/soft_decode"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center_vertical|left"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/setting_decode_soft"
            android:textColor="@color/main_text_color"
            android:textSize="16sp"/>

    </RadioGroup>

</LinearLayout>