<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/no_found_tip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/back_tv"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#43cfff"
            android:text="@string/back"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@id/back_tv"
            android:background="#33ffffff"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_above="@id/back_tv">
            <ImageView
                android:id="@+id/no_file_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"
                android:src="@drawable/illustration_nofile"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@id/no_file_iv"
                android:textSize="18sp"
                android:textColor="#fff"
                android:text="@string/subtitle_no_found"/>
        </RelativeLayout>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/operate_llyt"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        >
        <TextView
            android:id="@+id/cancel_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#80ffffff"
            android:text="@string/search_cancel"/>
        <TextView
            android:id="@+id/down_load_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="32dp"
            android:textSize="18sp"
            android:textColor="#43cfff"
            android:text="@string/download"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/subtitle_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/operate_llyt"
        >

    </android.support.v7.widget.RecyclerView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/operate_llyt"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#33ffffff"
        />

</RelativeLayout>