<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/down_et_group"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#ffffff"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="1dp"
        app:cardElevation="3dp">
        <EditText
            android:id="@+id/et_download_url"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:background="@null"
            android:hint="@string/download_url_edit_tip"
            android:imeOptions="actionSearch"
            android:padding="8dp"
            android:textColor="#000000"
            android:textColorHint="#b8b8b8"
            android:textSize="16sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/check_down_group"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#ffffff"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/down_et_group"
        app:cardPreventCornerOverlap="false"
        app:cardElevation="3dp">

        <TextView
            android:id="@+id/check_down_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/start_download"
            />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/history_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:drawableLeft="@drawable/ic_history"
        android:drawablePadding="4dp"
        app:layout_constraintTop_toBottomOf="@id/check_down_group"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/download_history"/>

    <TextView
        android:id="@+id/clear_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/check_down_group"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/text_color_gray"
        android:text="@string/clear_history"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/history_lv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/history_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </android.support.v7.widget.RecyclerView>


</android.support.constraint.ConstraintLayout>