<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#ffffff"
        android:paddingLeft="1dp"
        android:paddingRight="1dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center|start"
            android:text="@string/tip"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/fl_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center|start"
                android:lineSpacingMultiplier="1.2"
                android:textColor="@color/main_text_color"
                android:textSize="18sp" />

            <RelativeLayout
                android:id="@+id/rl_save_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/iv_clear"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="6dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/web_close"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/download_url_edit"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/no_empty_tip"
                    android:imeOptions="actionSearch"
                    android:maxLines="1"
                    android:layout_toLeftOf="@id/iv_clear"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textColorHint="#fc6060"
                    android:textSize="16sp" />



            </RelativeLayout>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fl_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/line" />

            <LinearLayout
                android:id="@+id/dialog_button_container"
                android:layout_width="match_parent"
                android:layout_height="47dip"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="0dip"
                    android:layout_height="47dip"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:textSize="16sp"
                    android:text="@string/cancel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <View
                    android:id="@+id/btn_divider"
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/line"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/ok"
                    android:layout_width="0dip"
                    android:layout_height="47dip"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:textSize="16sp"
                    android:text="@string/ok"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="16dp"
        android:scaleType="fitCenter"
         />

</RelativeLayout>